Fix modal height on mobile, refactor task timestamp, fix view links on mobile

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -3237,7 +3237,7 @@ input[type="submit"].btn.btn-mini {
   z-index: 1050;
   overflow: auto;
   width: 560px;
-  margin: -250px 0 0 -280px;
+  margin: -40px 0 0 -280px;
   background-color: #ffffff;
   border: 1px solid #999;
   border: 1px solid rgba(0, 0, 0, 0.3);
