--- a/public/less/modals.less
+++ b/public/less/modals.less
@@ -35,7 +35,7 @@
   z-index: @zindexModal;
   overflow: auto;
   width: 560px;
-  margin: -250px 0 0 -280px;
+  margin: -40px 0 0 -280px;
   background-color: @white;
   border: 1px solid #999;
   border: 1px solid rgba(0,0,0,.3);
